--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
           <div id="skillImgs" class="row">
             <div id="skillImgs" data-aos="fade-up" class="col-lg-6">
-              <h6>Skills</h6>
+              <h6>Knowledge</h6>
               <img src="./assets/img/skills/DS Logo.png" />
               <img src="./assets/img/skills/github.png" />
               <img src="./assets/img/skills/linux.png" />
