--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                     title="Endless Runner Game"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="#" title="More Details"
+                  <a href="https://github.com/CuptainTeamo/GameEndlessrunner" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
