--- a/index.html
+++ b/index.html
@@ -154,23 +154,39 @@
             <h2>Skills</h2>
           </div>
           <div id="skillImgs" class="row">
-            <div id="skillImgs" data-aos="fade-up" class="col-lg-6">
-              <h6>Knowledge</h6>
-              <img src="./assets/img/skills/DS Logo.png" />
-              <img src="./assets/img/skills/github.png" />
-              <img src="./assets/img/skills/linux.png" />
-              <img src="./assets/img/skills/NET_Core.png" />
-              <img src="./assets/img/skills/SQL.png" />
-              <img src="./assets/img/skills/Trello-Logo.png" />
+            <div id="skillImg" data-aos="fade-up" class="col-lg-6">
+              <div class="skillsheader">
+                <img src="./assets/img/skills/knowledge.png" />
+                <h6>Knowledge</h6>
+              </div>
+              <img src="./assets/img/skills/DS Logo.png" class="skillImage" />
+              <img src="./assets/img/skills/github.png" class="skillImage" />
+              <img src="./assets/img/skills/linux.png" class="skillImage" />
+              <img src="./assets/img/skills/NET_Core.png" class="skillImage" />
+              <img src="./assets/img/skills/SQL.png" class="skillImage" />
+              <img
+                src="./assets/img/skills/Trello-Logo.png"
+                class="skillImage"
+              />
             </div>
             <div id="WebDevelopment" data-aos="fade-up" class="col-lg-6">
-              <h6>Web Development</h6>
-              <img src="./assets/img/skills/javascript.png" />
-              <img src="./assets/img/skills/React.png" />
-              <img src="./assets/img/skills/NodeJS.png" id="JS" />
-              <img src="./assets/img/skills/mongodb.png" />
-              <img src="./assets/img/skills/css3.png" />
-              <img src="./assets/img/skills/html.png" />
+              <div class="skillsheader">
+                <img src="./assets/img/skills/web.png" />
+                <h6>Web Development</h6>
+              </div>
+              <img
+                src="./assets/img/skills/javascript.png"
+                class="skillImage"
+              />
+              <img src="./assets/img/skills/React.png" class="skillImage" />
+              <img
+                src="./assets/img/skills/NodeJS.png"
+                id="JS"
+                class="skillImage"
+              />
+              <img src="./assets/img/skills/mongodb.png" class="skillImage" />
+              <img src="./assets/img/skills/css3.png" class="skillImage" />
+              <img src="./assets/img/skills/html.png" class="skillImage" />
             </div>
             <div
               id="Languages"
@@ -179,10 +195,10 @@
               data-aos-delay="100"
             >
               <h6>Languages</h6>
-              <img src="./assets/img/skills/C++.png" />
-              <img src="./assets/img/skills/CSharp.png" />
-              <img src="./assets/img/skills/C.png" />
-              <img src="./assets/img/skills/Python.png" />
+              <img src="./assets/img/skills/C++.png" class="skillImage" />
+              <img src="./assets/img/skills/CSharp.png" class="skillImage" />
+              <img src="./assets/img/skills/C.png" class="skillImage" />
+              <img src="./assets/img/skills/Python.png" class="skillImage" />
             </div>
             <div
               id="research"
@@ -190,15 +206,24 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <h6>Research</h6>
-              <img src="./assets/img/skills/Kinect.png" />
-              <img src="./assets/img/skills/Matlab.png" />
+              <div class="skillsheader">
+                <img src="./assets/img/skills/researchLogo.png" />
+                <h6>Research</h6>
+              </div>
+              <img src="./assets/img/skills/Matlab.png" class="skillImage" />
+              <img src="./assets/img/skills/Kinect.png" class="skillImage" />
             </div>
             <div id="Software" data-aos="fade-up" data-aos-delay="100">
-              <h6>Softwares</h6>
-              <img src="./assets/img/skills/UE.png" />
-              <img src="./assets/img/skills/Visual-Studio-Logo.png" />
-              <img src="./assets/img/skills/VSCode.png" />
+              <div class="skillsheader">
+                <img src="./assets/img/skills/softwareLogo.png" />
+                <h6>Softwares</h6>
+              </div>
+              <img
+                src="./assets/img/skills/Visual-Studio-Logo.png"
+                class="skillImage"
+              />
+              <img src="./assets/img/skills/VSCode.png" class="skillImage" />
+              <img src="./assets/img/skills/UE.png" class="skillImage" />
             </div>
           </div>
         </div>
@@ -278,7 +303,13 @@
               </div>
               <h3 class="resume-title">Volunteer</h3>
               <div class="resume-item">
-                <h4>MITT Pride Club Member</h4>
+                <div class="resumeheader">
+                  <img
+                    src="./assets/img/Resume/Rainbow.jpg"
+                    class="resumelogo"
+                  />
+                  <h4>MITT Pride Club</h4>
+                </div>
                 <h5>2018 - 2019</h5>
                 <p>
                   <em>Manitoba Institute of Trades and Technology, Manitoba</em>
@@ -394,7 +425,9 @@
                     title="Endless Runner Game"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="https://github.com/CuptainTeamo/GameEndlessrunner" title="More Details"
+                  <a
+                    href="https://github.com/CuptainTeamo/GameEndlessrunner"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
