--- a/index.html
+++ b/index.html
@@ -174,27 +174,27 @@
                 <img src="./assets/img/skills/web.png" />
                 <h6>Web Development</h6>
               </div>
-              <img
-                src="./assets/img/skills/javascript.png"
-                class="skillImage"
-              />
               <img src="./assets/img/skills/React.png" class="skillImage" />
               <img
-                src="./assets/img/skills/NodeJS.png"
-                id="JS"
-                class="skillImage"
+              src="./assets/img/skills/NodeJS.png"
+              id="JS"
+              class="skillImage"
               />
               <img src="./assets/img/skills/mongodb.png" class="skillImage" />
               <img src="./assets/img/skills/css3.png" class="skillImage" />
               <img src="./assets/img/skills/html.png" class="skillImage" />
             </div>
             <div
-              id="Languages"
-              class="col-lg-6"
-              data-aos="fade-up"
-              data-aos-delay="100"
+            id="Languages"
+            class="col-lg-6"
+            data-aos="fade-up"
+            data-aos-delay="100"
             >
-              <h6>Languages</h6>
+            <h6>Languages</h6>
+              <img
+                src="./assets/img/skills/javascript.png"
+                class="skillImage"
+              />
               <img src="./assets/img/skills/C++.png" class="skillImage" />
               <img src="./assets/img/skills/CSharp.png" class="skillImage" />
               <img src="./assets/img/skills/C.png" class="skillImage" />
@@ -288,7 +288,7 @@
                     result on time.
                   </li>
                   <li>
-                    Learning all technologies (Kinect, C++, MATLAB, algorithm)
+                    Learning all technologies (C++, algorithm)
                     that are used on self-pace.
                   </li>
                   <li>
