change content in resume

--- a/index.html
+++ b/index.html
@@ -275,21 +275,20 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item pb-0">
-                <h4>Student Research Assistant</h4>
+                <h4>Research Assistant</h4>
                 <h5>2022 - Present</h5>
                 <p><em>Sheridan College, Ontario </em></p>
                 <ul>
+                  <li>
+                    Algorithm design and software development by 
+                    using Microsoft Azure Kinnect(body tracking), MATLAB, and C++
+                  </li>
                   <li>
                     Solving problems that occurred in the research and
                     discussing with teammates.
                   </li>
                   <li>
-                    Help the professor with the research and deliver the desired
-                    result on time.
-                  </li>
-                  <li>
-                    Learning all technologies (C++, algorithm)
-                    that are used on self-pace.
+                    Learning all technologies that are used on self-pace.
                   </li>
                   <li>
                     Working in a scrum team. Attending weekly meetings and
