--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     >Self-motivated Computer Science student with a passion for
                     problem solving who is comfortable in high paced work
                     environments. Can effectively communicate ,and has excellent
-                    problem analysis and sloving skills.</em
+                    problem analysis and solving skills.</em
                   >
                 </p>
                 <ul>
