--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
             <p>
               I am a current second-year Bachelor of Computer Science student at
               Sheridan College with a passion and aspiration for Software, Web,
-              and Game development. The process of getting the bachelor of
+              and Game development. The process of getting a bachelor of
               engineering gives me the mindset of an engineer, which makes me an
               excellent problem solver. This problem-solving skill gives me the
               ability to be a faster learner and it is crucial and helpful in my
               school research work and the whole learning journey. I am
-              currently looking for the opportunity of an internship in summer
-              2023 which is the end of my second-year study because I believe
+              currently looking for the opportunity of an internship in the summer
+              2024 which is the end of my third year study because I believe
               real work experiences are the best way to learn.
             </p>
           </div>
@@ -245,8 +245,8 @@
                 <p>
                   <em
                     >Self-motivated Computer Science student with a passion for
-                    problem solving who is comfortable in high paced work
-                    environments. Can effectively communicate ,and has excellent
+                    problem solving who is comfortable in high-paced work
+                    environments. Can effectively communicate,and has excellent
                     problem analysis and solving skills.</em
                   >
                 </p>
@@ -262,7 +262,7 @@
                 <h4>Honors Bachelor of Computer Science</h4>
                 <h5>2022 - 2025</h5>
                 <p><em>Sheridan College, Ontario</em></p>
-                <p>Current GPA: 3.96/4.0, Core GPA: 3.98/4.0</p>
+                <p>GPA: 3.98/4.0</p>
               </div>
               <div class="resume-item">
                 <h4>Bachelor of Engineering</h4>
@@ -288,14 +288,14 @@
                     discussing with teammates.
                   </li>
                   <li>
-                    Learning all technologies that are used on self-pace.
+                    Learning all technologies that are used on self-paced.
                   </li>
                   <li>
                     Working in a scrum team. Attending weekly meetings and
                     industry partner meetings.
                   </li>
                   <li>
-                    Communicate with the team, set and review the goals for each
+                    Communicate with the team, and set and review the goals for each
                     phase regularly.
                   </li>
                 </ul>
@@ -320,7 +320,7 @@
                     ideas.
                   </li>
                   <li>
-                    Helped students to learn LGBTQ knowledge in the campus.
+                    Helped students to learn LGBTQ knowledge on campus.
                   </li>
                   <li>Attended pride parade with college.</li>
                 </ul>
@@ -338,8 +338,8 @@
             <h2>Projects</h2>
             <p>
               There are some side projects from me. Some of them are not perfect
-              but they are still in the progress and being updated. New
-              techonologys will be applied to these projects during the learning
+              but they are still in progress and being updated. New
+              technologies will be applied to these projects during the learning
               process.
             </p>
           </div>
@@ -487,8 +487,8 @@
           <div class="section-title">
             <h2>Contact</h2>
             <p>
-              I'm available for internship roles for Summer 2023! And I'm always
-              open to speak more about my experiences,portfolio pieces, and new
+              I'm available for internship roles for Summer 2024! And I'm always
+              open to speak more about my experiences, portfolio pieces, and new
               opportunities. Let's connect!
             </p>
           </div>
@@ -527,7 +527,7 @@
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+          <!-- Purchase the pro version with a working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
