--- a/index.html
+++ b/index.html
@@ -364,6 +364,21 @@
               <div class="portfolio-wrap">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/YpwLcnk75ww?si=M7WEE3iEulD9UbLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
+              <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/portfolio-1.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Kanban_Web_Application with drag and drop function"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a
+                    href="https://www.youtube.com/embed/YpwLcnk75ww?si=M7WEE3iEulD9UbLO"
+                    target="”_blank”"
+                    title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
             </div>
             
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
