--- a/index.html
+++ b/index.html
@@ -362,11 +362,15 @@
           >
             <div class="col-lg-4 col-md-6 portfolio-item filter-game">
               <div class="portfolio-wrap">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YpwLcnk75ww?si=M7WEE3iEulD9UbLO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <img
+                  src="assets/img/portfolio/SpaceShootingVR.png"
+                  class="img-fluid"
+                  alt=""
+                />
               </div>
               <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-1.png"
+                    href="assets/img/portfolio/SpaceShootingVR.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Kanban_Web_Application with drag and drop function"
