--- a/index.html
+++ b/index.html
@@ -367,22 +367,21 @@
                   class="img-fluid"
                   alt=""
                 />
-              </div>
-              <div class="portfolio-links">
+                <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/SpaceShootingVR.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Kanban_Web_Application with drag and drop function"
+                    title="VR Space Shooting Game"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
                     href="https://www.youtube.com/embed/YpwLcnk75ww?si=M7WEE3iEulD9UbLO"
-                    target="”_blank”"
-                    title="More Details"
+                    title="Videos"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
+              </div>
             </div>
             
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
