--- a/index.html
+++ b/index.html
@@ -383,6 +383,30 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-game">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/TowerDefense.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/TowerDefense.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Tower Defense AI"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a
+                    href="https://www.youtube.com/embed/pifqtx01-9E?si=W6AAEvHRTB2N7dKw"
+                    title="Videos"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
             
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
