--- a/index.html
+++ b/index.html
@@ -363,13 +363,13 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-game">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/SpaceShootingVRGame.png"
+                  src="assets/img/portfolio/SpaceShootingVRGame.gif"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/SpaceShootingVRGame.png"
+                    href="assets/img/portfolio/SpaceShootingVRGame.gif"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="VR Space Shooting Game"
