--- a/index.html
+++ b/index.html
@@ -179,6 +179,30 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-game">
               <div class="portfolio-wrap">
                 <img
+                  src="assets/img/portfolio/StealTheCoin.gif"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/StealTheCoin.gif"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Steal The Coin"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a
+                    href="https://www.youtube.com/embed/NYCcej8nIZU?si=OP7zjUTt8-oSnhRw"
+                    title="Videos"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-lg-4 col-md-6 portfolio-item filter-game">
+              <div class="portfolio-wrap">
+                <img
                   src="assets/img/portfolio/SpaceShootingVR.gif"
                   class="img-fluid"
                   alt=""
